cmake_minimum_required(VERSION 3.28)
project(baekjoon_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(00000 src/00000/00000.cpp)

add_executable(02557 src/02xxx/02557.cpp)
add_executable(01000 src/01xxx/01000.cpp)
add_executable(01001 src/01xxx/01001.cpp)
add_executable(10998 src/10xxx/10998.cpp)
add_executable(01008 src/01xxx/01008.cpp)
add_executable(10869 src/10xxx/10869.cpp)
add_executable(10926 src/10xxx/10926.cpp)
add_executable(18108 src/18xxx/18108.cpp)
add_executable(10430 src/10xxx/10430.cpp)
add_executable(02588 src/02xxx/02588.cpp)
add_executable(11382 src/11xxx/11382.cpp)
add_executable(10171 src/10xxx/10171.cpp)
add_executable(10172 src/10xxx/10172.cpp)
