cmake_minimum_required(VERSION 3.28)
project(baekjoon_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(00000 src/00000/00000.cpp)

add_executable(02557 src/02xxx/02557.cpp)
add_executable(01000 src/01xxx/01000.cpp)
add_executable(01001 src/01xxx/01001.cpp)
add_executable(10998 src/10xxx/10998.cpp)
add_executable(01008 src/01xxx/01008.cpp)
add_executable(10869 src/10xxx/10869.cpp)
add_executable(10926 src/10xxx/10926.cpp)
add_executable(18108 src/18xxx/18108.cpp)
add_executable(10430 src/10xxx/10430.cpp)
add_executable(02588 src/02xxx/02588.cpp)
add_executable(11382 src/11xxx/11382.cpp)
add_executable(10171 src/10xxx/10171.cpp)
add_executable(10172 src/10xxx/10172.cpp)

add_executable(01330 src/01xxx/01330.cpp)
add_executable(09498 src/09xxx/09498.cpp)
add_executable(02753 src/02xxx/02753.cpp)
add_executable(14681 src/14xxx/14681.cpp)
add_executable(02884 src/02xxx/02884.cpp)
add_executable(02525 src/02xxx/02525.cpp)
add_executable(02480 src/02xxx/02480.cpp)
add_executable(02739 src/02xxx/02739.cpp)
add_executable(10950 src/10xxx/10950.cpp)
add_executable(08393 src/08xxx/08393.cpp)
add_executable(25304 src/25xxx/25304.cpp)
add_executable(25314 src/25xxx/25314.cpp)
add_executable(15552 src/15xxx/15552.cpp)
add_executable(11021 src/11xxx/11021.cpp)
add_executable(11022 src/11xxx/11022.cpp)
add_executable(02438 src/02xxx/02438.cpp)
add_executable(02439 src/02xxx/02439.cpp)
add_executable(10952 src/10xxx/10952.cpp)
add_executable(10951 src/10xxx/10951.cpp)

add_executable(10699 src/10xxx/10699.cpp)
add_executable(07287 src/07xxx/07287.cpp)
add_executable(25083 src/25xxx/25083.cpp)
add_executable(02420 src/02xxx/02420.cpp)
add_executable(02741 src/02xxx/02741.cpp)
add_executable(10872 src/10xxx/10872.cpp)

add_executable(10807 src/10xxx/10807.cpp)
add_executable(10871 src/10xxx/10871.cpp)
add_executable(10818 src/10xxx/10818.cpp)
add_executable(02562 src/02xxx/02562.cpp)
add_executable(10810 src/10xxx/10810.cpp)
add_executable(10813 src/10xxx/10813.cpp)
add_executable(05597 src/05xxx/05597.cpp)
add_executable(03052 src/03xxx/03052.cpp)
add_executable(10811 src/10xxx/10811.cpp)
add_executable(01546 src/01xxx/01546.cpp)
add_executable(02738 src/02xxx/02738.cpp)
add_executable(02566 src/02xxx/02566.cpp)
add_executable(10798 src/10xxx/10798.cpp)
add_executable(02563 src/02xxx/02563.cpp)
add_executable(15964 src/15xxx/15964.cpp)
add_executable(02475 src/02xxx/02475.cpp)
